# BMS

./: .cproject  .gitattributes  .gitignore  .mxproject  .project  BMS.ioc  clang-format
API/: CMakeLists.txt  bms_api.ui  build.sh  main.cpp  ui_bms_api.h
API/src/: SerialPort.cpp  SerialPort.h  q_communication.cpp  q_communication.h  q_main_window.cpp  q_main_window.h  q_tools.cpp  q_tools.h  serialization.cpp  serialization.h  test.cpp
API/udev/: 99-usbftdi.rules
Core/Inc/: FreeRTOSConfig.h  stm32f0xx_hal_conf.h  stm32f0xx_it.h
Core/Src/: freertos.c  gpio.c  i2c.c  main.c  stm32f0xx_it.c  usart.c
Debug/: BMS.elf  BMS.list  BMS.map  makefile  objects.list  sources.mk
Debug/Core/Src/: freertos.cyclo  freertos.d  freertos.su  gpio.d  i2c.d  main.cyclo  main.d  main.su  stm32f0xx_hal_msp.d  stm32f0xx_hal_timebase_tim.d  stm32f0xx_it.cyclo  stm32f0xx_it.d  stm32f0xx_it.su  subdir.mk  system_stm32f0xx.d  usart.d
Debug/Core/Startup/: startup_stm32f031k6ux.d  subdir.mk
Debug/Drivers/STM32F0xx_HAL_Driver/: stm32f0xx_hal.cyclo  stm32f0xx_hal.d  stm32f0xx_hal.su  stm32f0xx_hal_cortex.cyclo  stm32f0xx_hal_cortex.d  stm32f0xx_hal_cortex.su  stm32f0xx_hal_dma.cyclo  stm32f0xx_hal_dma.d  stm32f0xx_hal_dma.su  stm32f0xx_hal_exti.cyclo  stm32f0xx_hal_exti.d  stm32f0xx_hal_exti.su  stm32f0xx_hal_flash.cyclo  stm32f0xx_hal_flash.d  stm32f0xx_hal_flash.su  stm32f0xx_hal_flash_ex.cyclo  stm32f0xx_hal_flash_ex.d  stm32f0xx_hal_flash_ex.su  stm32f0xx_hal_gpio.cyclo  stm32f0xx_hal_gpio.d  stm32f0xx_hal_gpio.su  stm32f0xx_hal_i2c.cyclo  stm32f0xx_hal_i2c.d  stm32f0xx_hal_i2c.su  stm32f0xx_hal_i2c_ex.cyclo  stm32f0xx_hal_i2c_ex.d  stm32f0xx_hal_i2c_ex.su  stm32f0xx_hal_pwr.cyclo  stm32f0xx_hal_pwr.d  stm32f0xx_hal_pwr.su  stm32f0xx_hal_pwr_ex.cyclo  stm32f0xx_hal_pwr_ex.d  stm32f0xx_hal_pwr_ex.su  stm32f0xx_hal_rcc.cyclo  stm32f0xx_hal_rcc.d  stm32f0xx_hal_rcc.su  stm32f0xx_hal_rcc_ex.cyclo  stm32f0xx_hal_rcc_ex.d  stm32f0xx_hal_rcc_ex.su  stm32f0xx_hal_tim.cyclo  (+12 more)
Debug/Middlewares/FreeRTOS/: cmsis_os.cyclo  cmsis_os.d  cmsis_os.su  croutine.d  event_groups.cyclo  event_groups.d  event_groups.su  heap_4.cyclo  heap_4.d  heap_4.su  list.cyclo  list.d  list.su  port.cyclo  port.d  port.su  queue.cyclo  queue.d  queue.su  stream_buffer.cyclo  stream_buffer.d  stream_buffer.su  subdir.mk  tasks.cyclo  tasks.d  tasks.su  timers.d
Debug/src/task/: subdir.mk
Debug/src/tasks/: main_task.d  pc_task.cyclo  pc_task.d  pc_task.su  read_task.d  subdir.mk
bms_f031/: .cproject  .mxproject  .project  BMS.ioc  STM32F031K6UX_FLASH.ld  src
bms_f031/Core/Inc/: main.h
bms_f031/Core/Src/: gpio.c  main.c  usart.c
bms_l432/: .cproject  .mxproject  .project  bms_L432.ioc
bms_l432/Core/Inc/: can.h  gpio.h  i2c.h  main.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h
bms_l432/Core/Src/: can.c  gpio.c  i2c.c  main.c  stm32l4xx_it.c  usart.c
src/irq/: uart_irq.c  uart_irq.h
src/proto/: protocol.h
src/tasks/: main_task.c  main_task.h  pc_task.c  pc_task.h  read_task.c  read_task.h
src/utils/: BQ769x0.c  BQ769x0.h  bms.c  bms.h  com.c  com.h
